--- a/Jungle.vcxproj.filters
+++ b/Jungle.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src\Animal.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\GamingScene2.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -166,11 +163,14 @@
     <ClCompile Include="src\GamingScene5.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\Flower.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\WindParticle.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Animal.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="src\GamingScene2.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -745,6 +745,12 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="src\GamingScene5.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Flower.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\WindParticle.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
