--- a/Jungle.vcxproj
+++ b/Jungle.vcxproj
@@ -160,8 +160,8 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxmlerror.cpp" />
     <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxmlparser.cpp" />
     <ClCompile Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.cpp" />
-    <ClCompile Include="src\Animal.cpp" />
     <ClCompile Include="src\ButterFly.cpp" />
+    <ClCompile Include="src\Flower.cpp" />
     <ClCompile Include="src\GamingScene4.cpp" />
     <ClCompile Include="src\GamingScene2.cpp" />
     <ClCompile Include="src\GamingScene3.cpp" />
@@ -174,6 +174,7 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClCompile Include="src\State.cpp" />
     <ClCompile Include="src\StateManager.cpp" />
     <ClCompile Include="src\WindGenerator.cpp" />
+    <ClCompile Include="src\WindParticle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\addons\ofxAssimpModelLoader\src\ofx3DBaseLoader.h" />
@@ -355,8 +356,8 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClInclude Include="..\..\..\addons\ofxParticleEmitter\src\ofxParticleEmitter.h" />
     <ClInclude Include="..\..\..\addons\ofxXmlSettings\libs\tinyxml.h" />
     <ClInclude Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.h" />
-    <ClInclude Include="src\Animal.h" />
     <ClInclude Include="src\ButterFly.h" />
+    <ClInclude Include="src\Flower.h" />
     <ClInclude Include="src\GamingScene4.h" />
     <ClInclude Include="src\GamingScene2.h" />
     <ClInclude Include="src\GamingScene3.h" />
@@ -369,6 +370,7 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClInclude Include="src\State.h" />
     <ClInclude Include="src\StateManager.h" />
     <ClInclude Include="src\WindGenerator.h" />
+    <ClInclude Include="src\WindParticle.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\libs\openFrameworksCompiled\project\vs2010\openframeworksLib.vcxproj">
