Redesign game system
Redesign game system
Separate static scene, player control and camera control, butterfly
control

--- a/Jungle.vcxproj
+++ b/Jungle.vcxproj
@@ -162,20 +162,24 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClCompile Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.cpp" />
     <ClCompile Include="src\ButterFly.cpp" />
     <ClCompile Include="src\Flower.cpp" />
+    <ClCompile Include="src\GamingScene.cpp" />
     <ClCompile Include="src\GamingScene4.cpp" />
     <ClCompile Include="src\GamingScene2.cpp" />
     <ClCompile Include="src\GamingScene3.cpp" />
     <ClCompile Include="src\GamingScene1.cpp" />
     <ClCompile Include="src\GamingScene5.cpp" />
+    <ClCompile Include="src\GamingScene6.cpp" />
     <ClCompile Include="src\JungleParticle.cpp" />
     <ClCompile Include="src\Level1.cpp" />
     <ClCompile Include="src\Level2.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\JungleApp.cpp" />
+    <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\SceneManager.cpp" />
-    <ClCompile Include="src\SceneObject.cpp" />
+    <ClCompile Include="src\SceneModel.cpp" />
     <ClCompile Include="src\State.cpp" />
     <ClCompile Include="src\StateManager.cpp" />
+    <ClCompile Include="src\StaticScene.cpp" />
     <ClCompile Include="src\WindGenerator.cpp" />
     <ClCompile Include="src\WindParticle.cpp" />
   </ItemGroup>
@@ -361,20 +365,24 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClInclude Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.h" />
     <ClInclude Include="src\ButterFly.h" />
     <ClInclude Include="src\Flower.h" />
+    <ClInclude Include="src\GamingScene.h" />
     <ClInclude Include="src\GamingScene4.h" />
     <ClInclude Include="src\GamingScene2.h" />
     <ClInclude Include="src\GamingScene3.h" />
     <ClInclude Include="src\GamingScene1.h" />
     <ClInclude Include="src\GamingScene5.h" />
+    <ClInclude Include="src\GamingScene6.h" />
     <ClInclude Include="src\JungleApp.h" />
     <ClInclude Include="src\JungleParticle.h" />
     <ClInclude Include="src\Level1.h" />
     <ClInclude Include="src\Level2.h" />
+    <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\PreDef.h" />
     <ClInclude Include="src\SceneManager.h" />
-    <ClInclude Include="src\SceneObject.h" />
+    <ClInclude Include="src\SceneModel.h" />
     <ClInclude Include="src\State.h" />
     <ClInclude Include="src\StateManager.h" />
+    <ClInclude Include="src\StaticScene.h" />
     <ClInclude Include="src\WindGenerator.h" />
     <ClInclude Include="src\WindParticle.h" />
   </ItemGroup>
