--- a/Jungle.vcxproj
+++ b/Jungle.vcxproj
@@ -174,6 +174,7 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClCompile Include="src\Level1.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\JungleApp.cpp" />
+    <ClCompile Include="src\Mushroom.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\SceneManager.cpp" />
     <ClCompile Include="src\SceneModel.cpp" />
@@ -377,6 +378,7 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClInclude Include="src\JungleApp.h" />
     <ClInclude Include="src\JungleParticle.h" />
     <ClInclude Include="src\Level1.h" />
+    <ClInclude Include="src\Mushroom.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\PreDef.h" />
     <ClInclude Include="src\SceneManager.h" />
