bg/color change, rain

--- a/Jungle.vcxproj
+++ b/Jungle.vcxproj
@@ -161,6 +161,7 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxmlparser.cpp" />
     <ClCompile Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.cpp" />
     <ClCompile Include="src\ButterFly.cpp" />
+    <ClCompile Include="src\Cloud.cpp" />
     <ClCompile Include="src\CRSpline.cpp" />
     <ClCompile Include="src\Flower.cpp" />
     <ClCompile Include="src\GamingScene.cpp" />
@@ -366,6 +367,7 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClInclude Include="..\..\..\addons\ofxXmlSettings\libs\tinyxml.h" />
     <ClInclude Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.h" />
     <ClInclude Include="src\ButterFly.h" />
+    <ClInclude Include="src\Cloud.h" />
     <ClInclude Include="src\CRSpline.h" />
     <ClInclude Include="src\Flower.h" />
     <ClInclude Include="src\GamingScene.h" />
@@ -387,6 +389,7 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClInclude Include="src\StateManager.h" />
     <ClInclude Include="src\StaticScene.h" />
     <ClInclude Include="src\Tree.h" />
+    <ClInclude Include="src\Utility.h" />
     <ClInclude Include="src\WindGenerator.h" />
     <ClInclude Include="src\WindParticle.h" />
   </ItemGroup>
